表記揺れを修正

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </ul>
           </div>
           <div class="tech-card">
-            <h4>プロダクト制作経験あり</h4>
+            <h4>プロダクト制作経験有</h4>
             <ul class="tech-list">
               <li>Swift</li>
               <li>C#(Unity)</li>
